# ecs-game-of-life

./: .gitignore  .gitmodules
.conan/: remotes.txt
.github/workflows/: build-test.yml
with-entt/: .clang-format  CMakeLists.txt  README.rst  components.cpp  components.hpp  components_test.cpp  conanfile.txt  config.hpp  gol.cpp  gol.hpp  log.hpp  main.cpp  systems.cpp  systems.hpp  systems_test.cpp  test.cpp  tests.cpp  utils.cpp  utils.hpp  utils_test.cpp
